--- a/PPs.Html
+++ b/PPs.Html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="pps.css" />
     <style>
       #letterContent {
-        max-height: 400px; /* Set the maximum height for scrolling */
-        overflow-y: auto; /* Enable vertical scrolling */
+        max-height: 400px; 
+        overflow-y: auto; 
       }
     </style>
     <script>
@@ -103,7 +103,7 @@
             
             
               tata and all the very best for your Exams nana...........,
-            I love you Kannamma 💘 💝 <!-- Your long letter content goes here -->
+            I love you Kannamma 💘 💝 
           </p>
         </div>
         <a href="pps2.html">Click Here</a>
