--- a/PPs.Html
+++ b/PPs.Html
@@ -96,8 +96,8 @@
               nen ade chesevadini nana chinnapudu, i used to call my people and titevadini Nana, na mida ntha kopam unte nanu kotu, titu, emaina cheyi kani Nana vadileyaku Nana nanu, nen 
               meeru lekunda meeto matladakunda undatam chalaaa kastanga ayipotundi Nana, literally ntha kastam ayindant Nana, i feel like amma nato  sariga matladanatu Nana
               naku ah feel nijanga vastundi Nana, meeru antaru kada Nana edaina share chesukovali mana ane valato ani, anduke share chesukuntuna Nana, i just want you to share what you feel Nana
-              adi edaina deniki samandinchindi ayina Nana, Meeru nanu odaladu ante Nana, i know nana i am not perfect ani kani Nana, i want to become perfect Nana meekosam, nen tapul chesanu and nen vatini nunchi nerchukuna nana nijanga, meeru enalu nanu wait cheyamana nen wait chesta nana meekosam, nenu meeku loyal lenu ani nduk anukuntunaru nana meeru nenu,mimalni tapa bayata ammayilani chudatam manesi chala months avutunayi Nana
-              i am literally ready to share any of my passcodes ayina emaina Nana, I was always loyal to you Nana 💘.....          
+              adi edaina deniki samandinchindi ayina Nana, Meeru nanu odaladu ante Nana, i know nana i am not perfect ani kani Nana, i want to become perfect Nana meekosam, nen tapul chesanu and nen vatini nunchi nerchukuna nana nijanga, meeru enalu nanu wait cheyamana nen wait chesta nana meekosam,  nana nenu,mimalni tapa bayata ammayilani chudatam manesi chala months avutunayi Nana
+              i am literally ready to share any of my passcodes ayina emaina Nana, I was and will always be loyal to you Nana 💘.....          
 
             
             
